# AIMS

./: .gitmodules  CMakeLists.txt
src/client/: AIMSMainWindow.ui  CMakeLists.txt  ChangePasswordForm.ui  LoginForm.ui  StudentList.ui  main.cpp  resource.qrc
src/server/: CMakeLists.txt  database.cpp  database.h  main.cpp
